fixing hover on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ margin: auto;
 .choice {
   width:150px;
   height:150px;
-  cursor: pointer;
+  
 }
 
 .choiceA{
